set(INCLUDE_DIRS
    ${REVBAYES_DIR}/core
    ${REVBAYES_DIR}/core/math
    ${REVBAYES_DIR}/core/math/distributions
    ${REVBAYES_DIR}/core/monitors
    ${REVBAYES_DIR}/core/io
    ${REVBAYES_DIR}/core/moves
    ${REVBAYES_DIR}/core/moves/mixture
    ${REVBAYES_DIR}/core/moves/simple
    ${REVBAYES_DIR}/core/ncl
    ${REVBAYES_DIR}/core/functions
    ${REVBAYES_DIR}/core/functions/discrete
    ${REVBAYES_DIR}/core/functions/builtin
    ${REVBAYES_DIR}/core/functions/distribution
    ${REVBAYES_DIR}/core/functions/continuous
    ${REVBAYES_DIR}/core/functions/continuous/bivariate
    ${REVBAYES_DIR}/core/functions/phylogenetics
    ${REVBAYES_DIR}/core/utils
    ${REVBAYES_DIR}/core/dag
    ${REVBAYES_DIR}/core/dag/StochasticNodes
    ${REVBAYES_DIR}/core/dag/DeterministicNodes
    ${REVBAYES_DIR}/core/statistics
    ${REVBAYES_DIR}/core/statistics/mixture
    ${REVBAYES_DIR}/core/statistics/tree
    ${REVBAYES_DIR}/core/datatypes
    ${REVBAYES_DIR}/core/datatypes/characterhistory
    ${REVBAYES_DIR}/core/datatypes/math
    ${REVBAYES_DIR}/core/datatypes/character
    ${REVBAYES_DIR}/core/datatypes/phylogenetics
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap
    ${REVBAYES_DIR}/core/datatypes/trees
    ${REVBAYES_DIR}/core/analysis
    ${REVBAYES_DIR}/core/analysis/mcmc
    ${REVBAYES_DIR}/core/distributions
    ${REVBAYES_DIR}/core/distributions/math
)
set(RBCORE_INCLUDES ${INCLUDE_DIRS} PARENT_SCOPE)
include_directories(${INCLUDE_DIRS})
set(CORE_FILES
${REVBAYES_DIR}/core
${REVBAYES_DIR}/core/math
${REVBAYES_DIR}/core/math/RandomNumberGenerator.cpp
${REVBAYES_DIR}/core/math/RbMathHelper.h
${REVBAYES_DIR}/core/math/RbMathHelper.cpp
${REVBAYES_DIR}/core/math/RbMathFunctions.h
${REVBAYES_DIR}/core/math/RandomNumberFactory.cpp
${REVBAYES_DIR}/core/math/RbMathVector.h
${REVBAYES_DIR}/core/math/RbMathVector.cpp
${REVBAYES_DIR}/core/math/RbStatisticsHelper.h
${REVBAYES_DIR}/core/math/RbMathCombinatorialFunctions.h
${REVBAYES_DIR}/core/math/RbMathLogic.cpp
${REVBAYES_DIR}/core/math/RandomNumberGenerator.h
${REVBAYES_DIR}/core/math/RbMathCombinatorialFunctions.cpp
${REVBAYES_DIR}/core/math/RbMathFunctions.cpp
${REVBAYES_DIR}/core/math/RandomNumberFactory.h
${REVBAYES_DIR}/core/math/RbStatisticsHelper.cpp
${REVBAYES_DIR}/core/math/distributions
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.h
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.h
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.h
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.h
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.h
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.h
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.cpp
${REVBAYES_DIR}/core/math/RbMathLogic.h
${REVBAYES_DIR}/core/monitors
${REVBAYES_DIR}/core/monitors/ScreenMonitor.h
${REVBAYES_DIR}/core/monitors/FileMonitor.h
${REVBAYES_DIR}/core/monitors/Monitor.h
${REVBAYES_DIR}/core/monitors/FileMonitor.cpp
${REVBAYES_DIR}/core/monitors/Monitor.cpp
${REVBAYES_DIR}/core/monitors/ScreenMonitor.cpp
${REVBAYES_DIR}/core/io
${REVBAYES_DIR}/core/io/TaxonReader.h
${REVBAYES_DIR}/core/io/NclReader.cpp
#${REVBAYES_DIR}/core/io/FastaWriter.cpp
${REVBAYES_DIR}/core/io/NewickTreeReader.cpp
${REVBAYES_DIR}/core/io/NewickTreeReader.h
${REVBAYES_DIR}/core/io/NewickConverter.cpp
${REVBAYES_DIR}/core/io/TaxonReader.cpp
${REVBAYES_DIR}/core/io/DelimitedDataReader.h
#${REVBAYES_DIR}/core/io/NexusWriter.h
${REVBAYES_DIR}/core/io/DelimitedDataReader.cpp
${REVBAYES_DIR}/core/io/NclReader.h
${REVBAYES_DIR}/core/io/FastaWriter.h
${REVBAYES_DIR}/core/io/NewickConverter.h
#${REVBAYES_DIR}/core/io/NexusWriter.cpp
${REVBAYES_DIR}/core/moves
${REVBAYES_DIR}/core/moves/mixture
${REVBAYES_DIR}/core/moves/mixture/DPPScaleCatValsMove.h
${REVBAYES_DIR}/core/moves/mixture/DPPGibbsConcentrationMove.h
${REVBAYES_DIR}/core/moves/mixture/DPPScaleCatValsMove.cpp
${REVBAYES_DIR}/core/moves/mixture/DPPAllocateAuxGibbsMove.h
${REVBAYES_DIR}/core/moves/mixture/MixtureAllocationMove.h
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.h
${REVBAYES_DIR}/core/moves/MoveSchedule.cpp
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/AbstractMove.h
${REVBAYES_DIR}/core/moves/Move.h
${REVBAYES_DIR}/core/moves/AbstractMove.cpp
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/MoveSchedule.h
${REVBAYES_DIR}/core/moves/Move.cpp
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/Proposal.h
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.h
${REVBAYES_DIR}/core/moves/TreePoposal.h
${REVBAYES_DIR}/core/moves/simple
${REVBAYES_DIR}/core/moves/simple/SimpleMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.cpp
${REVBAYES_DIR}/core/moves/simple/SimplexMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimpleMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.h
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.h
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.cpp
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.h
${REVBAYES_DIR}/core/ncl
${REVBAYES_DIR}/core/ncl/nxsexception.cpp
${REVBAYES_DIR}/core/ncl/nxsreader.h
${REVBAYES_DIR}/core/ncl/nxsunalignedblock.h
${REVBAYES_DIR}/core/ncl/nxsstring.h
${REVBAYES_DIR}/core/ncl/nxsblock.cpp
${REVBAYES_DIR}/core/ncl/nxscharactersblock.h
${REVBAYES_DIR}/core/ncl/nxsmultiformat.cpp
${REVBAYES_DIR}/core/ncl/nxsblock.h
${REVBAYES_DIR}/core/ncl/nxstoken.cpp
${REVBAYES_DIR}/core/ncl/nxsutilcopy.h
${REVBAYES_DIR}/core/ncl/nxstaxaassociationblock.cpp
${REVBAYES_DIR}/core/ncl/nxsdistancesblock.h
${REVBAYES_DIR}/core/ncl/nxscdiscretematrix.h
${REVBAYES_DIR}/core/ncl/nxstaxaassociationblock.h
${REVBAYES_DIR}/core/ncl/nxsexception.h
${REVBAYES_DIR}/core/ncl/nxscharactersblock.cpp
${REVBAYES_DIR}/core/ncl/nxspublicblocks.cpp
${REVBAYES_DIR}/core/ncl/nxsallocatematrix.h
${REVBAYES_DIR}/core/ncl/nxsstring.cpp
${REVBAYES_DIR}/core/ncl/nxsunalignedblock.cpp
${REVBAYES_DIR}/core/ncl/nxstreesblock.cpp
${REVBAYES_DIR}/core/ncl/nxsdatablock.cpp
${REVBAYES_DIR}/core/ncl/nxscxxdiscretematrix.cpp
${REVBAYES_DIR}/core/ncl/nxsdatablock.h
${REVBAYES_DIR}/core/ncl/nxstaxablock.h
${REVBAYES_DIR}/core/ncl/ncl.h
${REVBAYES_DIR}/core/ncl/nxsassumptionsblock.h
${REVBAYES_DIR}/core/ncl/nxsdiscretedatum.h
${REVBAYES_DIR}/core/ncl/nxscxxdiscretematrix.h
${REVBAYES_DIR}/core/ncl/nxsdefs.h
${REVBAYES_DIR}/core/ncl/nxsmultiformat.h
${REVBAYES_DIR}/core/ncl/nxssetreader.h
${REVBAYES_DIR}/core/ncl/nxstaxablock.cpp
${REVBAYES_DIR}/core/ncl/nxssetreader.cpp
${REVBAYES_DIR}/core/ncl/nxsreader.cpp
${REVBAYES_DIR}/core/ncl/nxspublicblocks.h
${REVBAYES_DIR}/core/ncl/nxsdistancedatum.h
${REVBAYES_DIR}/core/ncl/nxstreesblock.h
${REVBAYES_DIR}/core/ncl/nxsassumptionsblock.cpp
${REVBAYES_DIR}/core/ncl/nxstoken.h
${REVBAYES_DIR}/core/ncl/nxsdistancesblock.cpp
${REVBAYES_DIR}/core/functions
${REVBAYES_DIR}/core/functions/discrete
${REVBAYES_DIR}/core/functions/discrete/ConstantFunction.h
${REVBAYES_DIR}/core/functions/discrete/DiscreteFunction.h
${REVBAYES_DIR}/core/functions/builtin
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.cpp
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.cpp
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.h
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.h
${REVBAYES_DIR}/core/functions/Function.cpp
${REVBAYES_DIR}/core/functions/distribution
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.h
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.cpp
${REVBAYES_DIR}/core/functions/continuous
${REVBAYES_DIR}/core/functions/continuous/bivariate
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryDivision.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryAddition.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinarySubtraction.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryMultiplication.h
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.h
${REVBAYES_DIR}/core/functions/phylogenetics
${REVBAYES_DIR}/core/functions/phylogenetics/FreeBinaryRateMatrixFunction.h
${REVBAYES_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.h
${REVBAYES_DIR}/core/functions/phylogenetics/FreeBinaryRateMatrixFunction.cpp
${REVBAYES_DIR}/core/functions/phylogenetics/TreeAssemblyFunction.cpp
${REVBAYES_DIR}/core/functions/TypedFunction.h
${REVBAYES_DIR}/core/functions/Function.h
${REVBAYES_DIR}/core/functions/VectorFunction.h
${REVBAYES_DIR}/core/functions/RbVectorFunction.h
${REVBAYES_DIR}/core/functions/VectorIndexOperator.h
${REVBAYES_DIR}/core/utils
${REVBAYES_DIR}/core/utils/RbFileManager.cpp
${REVBAYES_DIR}/core/utils/RbFileManager.h
${REVBAYES_DIR}/core/utils/RbConstants.h
${REVBAYES_DIR}/core/utils/RbOptions.h
${REVBAYES_DIR}/core/utils/RbSettings.h
${REVBAYES_DIR}/core/utils/RbException.h
${REVBAYES_DIR}/core/utils/StringUtilities.h
${REVBAYES_DIR}/core/utils/RbException.cpp
${REVBAYES_DIR}/core/utils/StringUtilities.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.cpp
${REVBAYES_DIR}/core/utils/RbUtil.cpp
${REVBAYES_DIR}/core/utils/RbUtil.h
${REVBAYES_DIR}/core/utils/RbSettings.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.h
${REVBAYES_DIR}/core/utils/IsDerivedFrom.h
${REVBAYES_DIR}/core/dag
${REVBAYES_DIR}/core/dag/DynamicNode.h
${REVBAYES_DIR}/core/dag/TypedDagNode.h
${REVBAYES_DIR}/core/dag/DagNode.h
${REVBAYES_DIR}/core/dag/DagNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes/StochasticNode.h
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.h
${REVBAYES_DIR}/core/dag/ConstantNode.h
${REVBAYES_DIR}/core/dag/DeterministicNodes
${REVBAYES_DIR}/core/dag/DeterministicNodes/DeterministicNode.h
${REVBAYES_DIR}/core/statistics
${REVBAYES_DIR}/core/statistics/mixture
${REVBAYES_DIR}/core/statistics/mixture/DppNumTablesStatistic.h
${REVBAYES_DIR}/core/statistics/tree
${REVBAYES_DIR}/core/statistics/tree/TreeLengthStatistic.h
${REVBAYES_DIR}/core/datatypes
${REVBAYES_DIR}/core/datatypes/math
${REVBAYES_DIR}/core/datatypes/math/MatrixReal.cpp
${REVBAYES_DIR}/core/datatypes/math/TransitionProbabilityMatrix.h
#${REVBAYES_DIR}/core/datatypes/math/DualityDiagram.h
#${REVBAYES_DIR}/core/datatypes/math/PrecisionMatrix.cpp
#${REVBAYES_DIR}/core/datatypes/math/DualityDiagram.cpp
#${REVBAYES_DIR}/core/datatypes/math/PrecisionMatrix.h
${REVBAYES_DIR}/core/datatypes/math/MatrixReal.h
${REVBAYES_DIR}/core/datatypes/math/TransitionProbabilityMatrix.cpp
${REVBAYES_DIR}/core/datatypes/RbIterator.h
${REVBAYES_DIR}/core/datatypes/Cloner.h
${REVBAYES_DIR}/core/datatypes/character
${REVBAYES_DIR}/core/datatypes/character/DiscreteCharacterState.h
${REVBAYES_DIR}/core/datatypes/character/AminoAcidState.h
${REVBAYES_DIR}/core/datatypes/character/CharacterState.cpp
${REVBAYES_DIR}/core/datatypes/character/DnaState.h
${REVBAYES_DIR}/core/datatypes/character/ContinuousCharacterState.cpp
${REVBAYES_DIR}/core/datatypes/character/DnaState.cpp
${REVBAYES_DIR}/core/datatypes/character/ContinuousCharacterState.h
${REVBAYES_DIR}/core/datatypes/character/StandardState.cpp
${REVBAYES_DIR}/core/datatypes/character/RnaState.h
${REVBAYES_DIR}/core/datatypes/character/RnaState.cpp
${REVBAYES_DIR}/core/datatypes/character/CharacterState.h
${REVBAYES_DIR}/core/datatypes/character/AminoAcidState.cpp
${REVBAYES_DIR}/core/datatypes/character/StandardState.h
${REVBAYES_DIR}/core/datatypes/phylogenetics
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_FreeBinary.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/GeneralRateMatrix.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix/RateMatrix_FreeBinary.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/TimeAndDate.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/Taxon.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/TimeAndDate.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/Taxon.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteTaxonData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/AbstractDiscreteCharacterData.h
${REVBAYES_DIR}/core/datatypes/Cloneable.h
${REVBAYES_DIR}/core/datatypes/RbConstIterator.h
${REVBAYES_DIR}/core/datatypes/RbVector.h
${REVBAYES_DIR}/core/datatypes/trees
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.h
${REVBAYES_DIR}/core/datatypes/trees/Topology.cpp
${REVBAYES_DIR}/core/datatypes/trees/BranchLengthTree.cpp
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventListener.h
${REVBAYES_DIR}/core/datatypes/trees/Clade.h
${REVBAYES_DIR}/core/datatypes/trees/TimeTree.cpp
${REVBAYES_DIR}/core/datatypes/trees/Tree.cpp
${REVBAYES_DIR}/core/datatypes/trees/Topology.h
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.cpp
${REVBAYES_DIR}/core/datatypes/trees/Clade.cpp
${REVBAYES_DIR}/core/datatypes/trees/BranchLengthTree.h
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.cpp
${REVBAYES_DIR}/core/datatypes/trees/Tree.h
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.h
${REVBAYES_DIR}/core/datatypes/trees/TimeTree.h
${REVBAYES_DIR}/core/analysis
${REVBAYES_DIR}/core/analysis/mcmc
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.cpp
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.cpp
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.h
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.h
${REVBAYES_DIR}/core/analysis/Model.h
${REVBAYES_DIR}/core/analysis/Model.cpp
${REVBAYES_DIR}/core/distributions
${REVBAYES_DIR}/core/distributions/math
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.h
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.h
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.h
${REVBAYES_DIR}/core/distributions/math/UniformDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.h
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.h
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.cpp
${REVBAYES_DIR}/core/distributions/Distribution.h
${REVBAYES_DIR}/core/distributions/Distribution.cpp
${REVBAYES_DIR}/core/distributions/MixtureDistribution.h
${REVBAYES_DIR}/core/distributions/TypedDistribution.h
${REVBAYES_DIR}/core/distributions/DirichletProcessPriorDistribution.h
)
add_library(rb-core ${CORE_FILES})
