set(INCLUDE_DIRS
    ${REVBAYES_DIR}/core
    ${REVBAYES_DIR}/core/math
    ${REVBAYES_DIR}/core/math/distributions
    ${REVBAYES_DIR}/core/monitors
    ${REVBAYES_DIR}/core/io
    ${REVBAYES_DIR}/core/moves
    ${REVBAYES_DIR}/core/moves/mixture
    ${REVBAYES_DIR}/core/moves/simple
    ${REVBAYES_DIR}/core/ncl
    ${REVBAYES_DIR}/core/functions
    ${REVBAYES_DIR}/core/functions/discrete
    ${REVBAYES_DIR}/core/functions/builtin
    ${REVBAYES_DIR}/core/functions/distribution
    ${REVBAYES_DIR}/core/functions/continuous
    ${REVBAYES_DIR}/core/functions/continuous/bivariate
    ${REVBAYES_DIR}/core/functions/phylogenetics
    ${REVBAYES_DIR}/core/utils
    ${REVBAYES_DIR}/core/dag
    ${REVBAYES_DIR}/core/dag/StochasticNodes
    ${REVBAYES_DIR}/core/dag/DeterministicNodes
    ${REVBAYES_DIR}/core/statistics
    ${REVBAYES_DIR}/core/statistics/mixture
    ${REVBAYES_DIR}/core/statistics/tree
    ${REVBAYES_DIR}/core/datatypes
    ${REVBAYES_DIR}/core/datatypes/characterhistory
    ${REVBAYES_DIR}/core/datatypes/math
    ${REVBAYES_DIR}/core/datatypes/character
    ${REVBAYES_DIR}/core/datatypes/phylogenetics
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratematrix
    ${REVBAYES_DIR}/core/datatypes/phylogenetics/ratemap
    ${REVBAYES_DIR}/core/datatypes/trees
    ${REVBAYES_DIR}/core/analysis
    ${REVBAYES_DIR}/core/analysis/mcmc
    ${REVBAYES_DIR}/core/distributions
    ${REVBAYES_DIR}/core/distributions/math
)
set(RBCORE_INCLUDES ${INCLUDE_DIRS} PARENT_SCOPE)
include_directories(${INCLUDE_DIRS})
set(CORE_FILES
${REVBAYES_DIR}/core
${REVBAYES_DIR}/core/math
${REVBAYES_DIR}/core/math/RandomNumberGenerator.cpp
${REVBAYES_DIR}/core/math/MathHelper.h
${REVBAYES_DIR}/core/math/MathHelper.cpp
${REVBAYES_DIR}/core/math/MathFunctions.h
${REVBAYES_DIR}/core/math/RandomNumberFactory.cpp
${REVBAYES_DIR}/core/math/MathVector.h
${REVBAYES_DIR}/core/math/MathVector.cpp
${REVBAYES_DIR}/core/math/StatisticsHelper.h
${REVBAYES_DIR}/core/math/MathCombinatorialFunctions.h
${REVBAYES_DIR}/core/math/MathLogic.cpp
${REVBAYES_DIR}/core/math/RandomNumberGenerator.h
${REVBAYES_DIR}/core/math/MathCombinatorialFunctions.cpp
${REVBAYES_DIR}/core/math/MathFunctions.cpp
${REVBAYES_DIR}/core/math/RandomNumberFactory.h
${REVBAYES_DIR}/core/math/StatisticsHelper.cpp
${REVBAYES_DIR}/core/math/distributions
${REVBAYES_DIR}/core/math/distributions/DistributionBinomial.h
${REVBAYES_DIR}/core/math/distributions/DistributionBinomial.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionNegativeBinomial.h
${REVBAYES_DIR}/core/math/distributions/DistributionNegativeBinomial.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.h
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.h
${REVBAYES_DIR}/core/math/distributions/DistributionDirichlet.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionUniform.h
${REVBAYES_DIR}/core/math/distributions/DistributionBeta.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.h
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.h
${REVBAYES_DIR}/core/math/distributions/DistributionNormal.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionGamma.h
${REVBAYES_DIR}/core/math/distributions/DistributionPoisson.cpp
${REVBAYES_DIR}/core/math/distributions/DistributionPoisson.h
${REVBAYES_DIR}/core/math/distributions/DistributionExponential.cpp
${REVBAYES_DIR}/core/math/MathLogic.h
${REVBAYES_DIR}/core/monitors
${REVBAYES_DIR}/core/monitors/ScreenMonitor.h
${REVBAYES_DIR}/core/monitors/FileMonitor.h
${REVBAYES_DIR}/core/monitors/Monitor.h
${REVBAYES_DIR}/core/monitors/FileMonitor.cpp
${REVBAYES_DIR}/core/monitors/Monitor.cpp
${REVBAYES_DIR}/core/monitors/ScreenMonitor.cpp
${REVBAYES_DIR}/core/io
${REVBAYES_DIR}/core/io/BinaryCharacterDataReader.h
${REVBAYES_DIR}/core/io/BinaryCharacterDataReader.cpp
${REVBAYES_DIR}/core/io/FastaWriter.cpp
${REVBAYES_DIR}/core/io/NewickTreeReader.cpp
${REVBAYES_DIR}/core/io/NewickTreeReader.h
${REVBAYES_DIR}/core/io/NewickConverter.cpp
${REVBAYES_DIR}/core/io/DelimitedDataReader.h
#${REVBAYES_DIR}/core/io/NexusWriter.h
${REVBAYES_DIR}/core/io/DelimitedDataReader.cpp
${REVBAYES_DIR}/core/io/FastaWriter.h
${REVBAYES_DIR}/core/io/NewickConverter.h
#${REVBAYES_DIR}/core/io/NexusWriter.cpp
${REVBAYES_DIR}/core/moves
${REVBAYES_DIR}/core/moves/mixture
${REVBAYES_DIR}/core/moves/mixture/MixtureAllocationMove.h
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.h
${REVBAYES_DIR}/core/moves/MoveSchedule.cpp
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/AbstractMove.h
${REVBAYES_DIR}/core/moves/Move.h
${REVBAYES_DIR}/core/moves/AbstractMove.cpp
${REVBAYES_DIR}/core/moves/SequenctialMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/MoveSchedule.h
${REVBAYES_DIR}/core/moves/Move.cpp
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.cpp
${REVBAYES_DIR}/core/moves/Proposal.h
${REVBAYES_DIR}/core/moves/RandomMoveSchedule.h
${REVBAYES_DIR}/core/moves/TreePoposal.h
${REVBAYES_DIR}/core/moves/simple
${REVBAYES_DIR}/core/moves/simple/SimpleMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexMove.h
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.h
${REVBAYES_DIR}/core/moves/simple/SubtreePruneRegraft.cpp
${REVBAYES_DIR}/core/moves/simple/SimplexMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.cpp
${REVBAYES_DIR}/core/moves/simple/SlidingMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimpleMove.cpp
${REVBAYES_DIR}/core/moves/simple/ScaleMove.h
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.h
${REVBAYES_DIR}/core/moves/simple/BetaSimplexMove.cpp
${REVBAYES_DIR}/core/moves/simple/SimplexSingleElementScale.cpp
${REVBAYES_DIR}/core/moves/SingleRandomMoveSchedule.h
${REVBAYES_DIR}/core/functions
${REVBAYES_DIR}/core/functions/discrete
${REVBAYES_DIR}/core/functions/discrete/ConstantFunction.h
${REVBAYES_DIR}/core/functions/discrete/DiscreteFunction.h
${REVBAYES_DIR}/core/functions/builtin
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.cpp
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.cpp
${REVBAYES_DIR}/core/functions/builtin/MeanFunction.h
${REVBAYES_DIR}/core/functions/builtin/NormalizeVectorFunction.h
${REVBAYES_DIR}/core/functions/builtin/EntropyFunction.h
${REVBAYES_DIR}/core/functions/builtin/EntropyFunction.cpp
${REVBAYES_DIR}/core/functions/Function.cpp
${REVBAYES_DIR}/core/functions/distribution
${REVBAYES_DIR}/core/functions/distribution/DiscreteBetaValuesFunction.h
${REVBAYES_DIR}/core/functions/distribution/DiscreteBetaValuesFunction.cpp
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.h
${REVBAYES_DIR}/core/functions/distribution/QuantileFunction.cpp
${REVBAYES_DIR}/core/functions/continuous
${REVBAYES_DIR}/core/functions/continuous/bivariate
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryDivision.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryAddition.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinarySubtraction.h
${REVBAYES_DIR}/core/functions/continuous/bivariate/BinaryMultiplication.h
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.cpp
${REVBAYES_DIR}/core/functions/continuous/ContinuousFunction.h
${REVBAYES_DIR}/core/functions/continuous/LogitFunction.h
${REVBAYES_DIR}/core/functions/TypedFunction.h
${REVBAYES_DIR}/core/functions/Function.h
${REVBAYES_DIR}/core/functions/VectorFunction.h
${REVBAYES_DIR}/core/functions/VectorIndexOperator.h
${REVBAYES_DIR}/core/utils
${REVBAYES_DIR}/core/utils/FileManager.cpp
${REVBAYES_DIR}/core/utils/FileManager.h
${REVBAYES_DIR}/core/utils/Constants.h
${REVBAYES_DIR}/core/utils/Options.h
${REVBAYES_DIR}/core/utils/Settings.h
${REVBAYES_DIR}/core/utils/Exception.h
${REVBAYES_DIR}/core/utils/StringUtilities.h
${REVBAYES_DIR}/core/utils/Exception.cpp
${REVBAYES_DIR}/core/utils/StringUtilities.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.cpp
${REVBAYES_DIR}/core/utils/Utilities.cpp
${REVBAYES_DIR}/core/utils/Utilities.h
${REVBAYES_DIR}/core/utils/numerics.h
${REVBAYES_DIR}/core/utils/avx_mathfun.h
${REVBAYES_DIR}/core/utils/sse_mathfun.h
${REVBAYES_DIR}/core/utils/Settings.cpp
${REVBAYES_DIR}/core/utils/TreeUtilities.h
${REVBAYES_DIR}/core/utils/IsDerivedFrom.h
${REVBAYES_DIR}/core/dag
${REVBAYES_DIR}/core/dag/DynamicNode.h
${REVBAYES_DIR}/core/dag/TypedDagNode.h
${REVBAYES_DIR}/core/dag/DagNode.h
${REVBAYES_DIR}/core/dag/DagNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.cpp
${REVBAYES_DIR}/core/dag/StochasticNodes/StochasticNode.h
${REVBAYES_DIR}/core/dag/StochasticNodes/ContinuousStochasticNode.h
${REVBAYES_DIR}/core/dag/ConstantNode.h
${REVBAYES_DIR}/core/dag/DeterministicNodes
${REVBAYES_DIR}/core/dag/DeterministicNodes/DeterministicNode.h
${REVBAYES_DIR}/core/statistics
${REVBAYES_DIR}/core/statistics/tree
${REVBAYES_DIR}/core/statistics/tree/TreeLengthStatistic.h
${REVBAYES_DIR}/core/datatypes
${REVBAYES_DIR}/core/datatypes/Cloner.h
${REVBAYES_DIR}/core/datatypes/phylogenetics
${REVBAYES_DIR}/core/datatypes/phylogenetics/BinaryCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/BinaryCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/BinaryTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/BinaryTaxonData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousBinaryCharacterData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousBinaryCharacterData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteBinaryTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/DiscreteBinaryTaxonData.cpp
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousBinaryTaxonData.h
${REVBAYES_DIR}/core/datatypes/phylogenetics/ContinuousBinaryTaxonData.cpp
${REVBAYES_DIR}/core/datatypes/Cloneable.h
${REVBAYES_DIR}/core/datatypes/trees
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.h
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventListener.h
${REVBAYES_DIR}/core/datatypes/trees/Clade.h
${REVBAYES_DIR}/core/datatypes/trees/Tree.cpp
${REVBAYES_DIR}/core/datatypes/trees/TreeChangeEventHandler.cpp
${REVBAYES_DIR}/core/datatypes/trees/Clade.cpp
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.cpp
${REVBAYES_DIR}/core/datatypes/trees/Tree.h
${REVBAYES_DIR}/core/datatypes/trees/TopologyNode.h
${REVBAYES_DIR}/core/analysis
${REVBAYES_DIR}/core/analysis/mcmc
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.cpp
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.cpp
${REVBAYES_DIR}/core/analysis/mcmc/Mcmc.h
${REVBAYES_DIR}/core/analysis/mcmc/ParallelMcmcmc.h
${REVBAYES_DIR}/core/analysis/Model.h
${REVBAYES_DIR}/core/analysis/Model.cpp
${REVBAYES_DIR}/core/distributions
${REVBAYES_DIR}/core/distributions/math
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.h
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.h
${REVBAYES_DIR}/core/distributions/math/ContinuousDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/GammaDistribution.h
${REVBAYES_DIR}/core/distributions/math/UniformDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.h
${REVBAYES_DIR}/core/distributions/math/DirichletDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/ExponentialDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.h
${REVBAYES_DIR}/core/distributions/math/BetaDistribution.cpp
${REVBAYES_DIR}/core/distributions/math/NormalDistribution.h
${REVBAYES_DIR}/core/distributions/math/NormalDistribution.cpp
${REVBAYES_DIR}/core/distributions/Distribution.h
${REVBAYES_DIR}/core/distributions/Distribution.cpp
${REVBAYES_DIR}/core/distributions/MixtureDistribution.h
${REVBAYES_DIR}/core/distributions/TypedDistribution.h
)
add_library(rb-core ${CORE_FILES})